# rf-trans-v2

./: .gitignore  CMakeLists.txt  README.md  todo.md
cmake/: rf_transConfig.cmake.in
docs/: discovery-mechanism.md
include/trans/: advertise_options.hpp  discovery.hpp  discovery_observer.hpp  handler_storage.hpp  handler_storege.hpp  handler_wrapper.hpp  helpers.hpp  message_info.hpp  message_runtime.hpp  msgs.hpp  net_utils.hpp  node.hpp  node_shared.hpp  publish_msg_details.hpp  publisher.hpp  publisher_info.hpp  rep_handler.hpp  req_handler.hpp  service_runtime.hpp  subscription_handler.hpp  topic_storage.hpp  trans_types.hpp
include/trans/details/: discovery.hpp  handler_storage.hpp  handler_wrapper.hpp  helpers.hpp  message_runtime.hpp  net_utils.hpp  node_shared.hpp  publish_msg_details.hpp  publisher_info.hpp  rep_handler.hpp  req_handler.hpp  service_runtime.hpp  subscription_handler.hpp  topic_storage.hpp  trans_types.hpp
msgs/: discovery.proto  empty.proto  example.proto  header.proto  time.proto
src/: discovery_observer.cc  handler_wrapper.cc  message_runtime.cc  node.cc  node_shared.cc  publisher.cc  publisher_info.cc  service_runtime.cc
test/: CMakeLists.txt  main.cc  test_discovery.cc  test_node_shared.cc  test_pub.cc  test_request.cc  test_response.cc  test_sub.cc
test/benchmark/: CMakeLists.txt  benchmark_pubsub_service.cc  benchmark_pubsub_subscriber.cc  benchmark_service_server.cc
test/examples/: CMakeLists.txt  test_discovery.cc  test_pub.cc  test_sub.cc
test/ut/: CMakeLists.txt  test_advertise_options.cc  test_discovery_init.cc  test_node_lifecycle.cc  test_publisher_info.cc  test_topic_storage.cc
tools/: CMakeLists.txt  rf_trans.cc
